2002-10-31  Morten Welinder  <terra@diku.dk>

	* src/mathfunc.c (qgamma): Handle the scale parameter at the very
	end; just work with unit scale.

	* src/func.c (function_def_get_arg_type): Do something sane for
	NODES functions.

2002-10-31  Jody Goldberg <jody@gnome.org>

	* src/item-edit.c (scan_for_range) : merge a pile of 1 time routine
	  together to make it clearer what they are trying to do.  I still
	  don't think this belongs here but at least its getting easier to
	  read.

	* src/workbook-edit.c (wbcg_edit_finish) : allow a user to enter "-"
	  without a hassle.  If a user accepts the result of a parse error
	  as a string restore focus to the sheet.  The patch that focused on
	  the entry would confuse things, and we would pop backinto edit mode.

	* src/gnumeric.h : Bring things back down to 256x64k memory usage is
	  still too high.

2002-10-30  J.H.M. Dassen (Ray) <jdassen@debian.org>

	* debian/TODO, debian/gnumeric.postinst: New.
	* debian/gnumeric-doc.doc-base: Removed.
	* debian/README.Debian, debian/changelog, debian/control, 
	  debian/gnumeric-doc.dirs, debian/gnumeric-doc.files, debian/rules:
	  Updated.

2002-10-30  Morten Welinder  <terra@diku.dk>

	* src/workbook-edit.c (entry_changed): Ditto.
	(wbcg_edit_start): Ditto.

	* src/func.c (tokenized_help_new): Make UTF-8 safe.

	* src/cell-draw.c (cell_split_text): Fix isspace check and
	eliminate ctype.h usage.
	* src/print-cell.c (cell_split_text): Ditto.
	* src/rendered-value.c (rendered_value_calc_size_ext): Ditto.

	* src/gutils.c (gnm_mem_chunk_free): Debugging improvement.

	* src/mathfunc.c (qgamma): New implementation.

2002-10-30  Jody Goldberg <jody@gnome.org>

	* src/complete-sheet.c (complete_sheet_search_iteration) : only kick
	  the autofill in after 3 characters.

	* src/item-edit.c (item_edit_draw) : respect more of the style
	  settings including v-alignment, underline, strikethrough, and
	  colours.

2002-10-29  Jody Goldberg <jody@gnome.org>
